# yt-scribe

./: .gitignore  .md-whitelist  README.md  pyproject.toml  requirements.txt  soul.md
tests/: test_bundle.py  test_cli.py  test_formatter.py  test_search.py  test_url_parser.py
web/: index.php
web/api/: bundles.php  download.php  playlist.php  search.php  stream.php
web/css/: style.css
web/includes/: cli.php
yt_scribe/: __init__.py  bundle.py  cli.py  config.py  errors.py  formatter.py  metadata.py  search.py  transcript.py  url_parser.py
