[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-scribe"
version = "0.1.0"
description = "Fetch YouTube transcripts as formatted Markdown"
requires-python = ">=3.9"
dependencies = [
    "youtube-transcript-api>=1.2.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
enrich = ["yt-dlp>=2024.1.0"]

[project.scripts]
yt-scribe = "yt_scribe.cli:main"

[tool.setuptools.packages.find]
include = ["yt_scribe*"]
