[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-scribe"
version = "0.7.0"
description = "Fetch YouTube transcripts as formatted Markdown"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=1.2.0",
    "requests>=2.28.0",
    "yt-dlp>=2024.1.0",
]

[project.scripts]
yt-scribe = "yt_scribe.cli:main"

[tool.setuptools.packages.find]
include = ["yt_scribe*"]
